...
        app:layout_constraintTop_toBottomOf="@id/lablePickImage"
        android:layout_marginStart="@dimen/margin_20dp"
        android:paddingTop="@dimen/margin_20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/gray_mid" />

    <EditText android:id="@+id/inputFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:padding="@dimen/margin_10dp"
        android:maxLength="50"
        android:textColor="@color/black"
...
        android:textSize="@dimen/medium_16sp"
        app:layout_constraintTop_toBottomOf="@id/errorFirstName"
        android:layout_marginStart="@dimen/margin_20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/gray_mid" />

    <EditText android:id="@+id/inputLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:padding="@dimen/margin_10dp"
        android:maxLength="50"
        android:textColor="@color/black"
...
        android:textSize="@dimen/medium_16sp"
        app:layout_constraintTop_toBottomOf="@id/errorLastName"
        android:layout_marginStart="@dimen/margin_20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/gray_mid" />

    <EditText android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:padding="@dimen/margin_10dp"
        android:maxLength="50"
        android:textColor="@color/black"
...
        android:textSize="@dimen/medium_16sp"
        app:layout_constraintTop_toBottomOf="@id/errorEmail"
        android:layout_marginStart="@dimen/margin_20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/gray_mid" />

    <EditText android:id="@+id/inputPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:padding="@dimen/margin_10dp"
        android:maxLength="10"
        android:digits="0123456789"
...
            app:layout_constraintTop_toBottomOf="@id/errorPhone"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/gray_mid" />

        <EditText android:id="@+id/inputEducation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:padding="@dimen/margin_10dp"
            android:maxLength="50"
            android:textColor="@color/black"
...
            app:layout_constraintTop_toBottomOf="@id/errorEducation"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/gray_mid" />

        <EditText android:id="@+id/inputWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:padding="@dimen/margin_10dp"
            android:maxLength="50"
            android:textColor="@color/black"
...
        app:layout_constraintTop_toBottomOf="@id/errorWork"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/gray_mid" />

    <EditText android:id="@+id/inputAbout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="@dimen/margin_10dp"
        android:maxLength="500"
        android:gravity="top|start"
        android:singleLine="false"
...
            android:layout_marginStart="@dimen/margin_20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"
            android:textColor="@color/red"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/profile_common_label_save"
                android:textAllCaps="false"
...
